# nicegui-tic_tac_toe

./: README.md  pyproject.toml
src/nicegui_tic_tac_toe/: __init__.py  __main__.py  main.py  tic_tac_toe.py
src/tests/: test_tic_tac_toe.py
