[project]
authors = [{name = "Saito Tsutomu", email = "tsutomu7@hotmail.co.jp"}]
classifiers = [
  "Development Status :: 1 - Planning",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Topic :: Software Development",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "nicegui>=2.9.1",
]
description = "TicTacToe on NiceGUI"
name = "nicegui-tic_tac_toe"
readme = "README.md"
requires-python = ">=3.11"
version = "0.1.1"

[project.urls]
homepage = "https://github.com/SaitoTsutomu/nicegui-tic_tac_toe"

[project.scripts]
tic-tac-toe = "nicegui_tic_tac_toe:main"

[tool.mypy]
files = "src"
ignore_missing_imports = true

[tool.ruff]
src = ["src"]

[tool.ruff.lint]
ignore = ["ANN", "CPY", "D", "E501", "C901", "PLR0912"]
preview = true
select = ["ALL"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]
