[project]
authors = [{name = "Saito Tsutomu", email = "tsutomu7@hotmail.co.jp"}]
classifiers = [
  "Development Status :: 1 - Planning",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Topic :: Software Development",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "fire>=0.7.0",
  "nicegui>=2.11.1",
]
description = "TicTacToe on NiceGUI"
name = "nicegui-tic_tac_toe"
readme = "README.md"
requires-python = ">=3.12"
version = "0.1.6"

[project.urls]
homepage = "https://github.com/SaitoTsutomu/nicegui-tic_tac_toe"

[project.scripts]
tic-tac-toe = "nicegui_tic_tac_toe:main"

[tool.mypy]
files = "src"
ignore_missing_imports = true

[tool.ruff]
src = ["src"]

[tool.ruff.lint]
ignore = ["ANN", "CPY", "D", "E501", "C901", "PLR0912"]
preview = true
select = ["ALL"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[dependency-groups]
dev = [
  "pytest>=8.3.4",
]
